2005-08-13  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Users/Shells.pm: small indenting fix
	* Users/Users.pm: modify to get data from login.defs and some pam 
	info (whether to use MD5 to crypt passwords)
	* UsersConfig.pm: new toplevel object, contains the users list,	and
	logindefs info relevant to users. Deprecates UserList
	* UsersList.pm: deleted

2005-06-12  Carlos Garnacho Parro  <carlosg@gnome.org>

	* time-conf.in: applied patch to update /etc/timezone in debian based
	systems. Fixes #167035

2005-06-12  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in: added support for WEP key type (ASCII or hexa)

2005-05-08  Carlos Garnacho Parro  <carlosg@gnome.org>

	* UsersList.pm: added
	* Loader.pl.in: use UsersList
	* Users/Users.pm: made passwd/shadow parameters a bit more generic,
	but still needs some love. Removed unused bits from the get()
	function, implemented get_files()

2005-05-04  Carlos Garnacho Parro  <carlosg@gnome.org>

	* SharesList.pm: adapted signal emitting to new Dbus bindings API
	* Users/Shells.pm: separated shells handling from Users/Users.pm,
	implemented set()
	* ShellsList.pm: use new .pm for shells, monitor /etc/shells
	* Utils/Monitor.pm: accept both arrays and single file names

2005-05-02  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Users/Users.pm: moved from users-conf.in, removed some code that
	should not be used now
	* users-conf.in: removed
	* ShellsList.pm: object for gettings the available shells
	* Loader.pl.in: add ShellsList to the init code
	* ServicesList.pm: put object path correctly
	* test-backends: put object paths correctly
	* Init/Services.pm: forgot to rename namespace to Init::Services

2005-04-29  Carlos Garnacho Parro  <carlosg@gnome.org>

	* SharesList.pm: put object path correctly
	* configure.in: use the 2.0 .pc file, bumped version to 1.9.x
	* system-tools-backends.pc.in: removed
	* system-tools-backends-2.0.pc.in: added

2005-04-27  Carlos Garnacho Parro  <carlosg@gnome.org>
